# motel-db

./: .env.example  .gitignore  .strands-pg-ref  CALIBRATION.md  DEPLOY.md  Dockerfile  README.md  area.py  bootstrap-lxc.sh  cache.py  chains.py  deploy.sh  docker-compose.yml  entrypoint.sh  places.py  pyproject.toml  requirements.txt  server.py  verdict.py
db/: Dockerfile
migrations/: 100_towns.sql  110_town_verdicts.sql  120_chain_blocklist.sql  200_api.sql  210_score_notes.sql
scripts/: ingest_towns.py  migrate.py  region_scan.py
strands_pg/: __init__.py  agentmail.py  session.py
web/: index.html
