[project]
name = "motel-db"
version = "0.1.0"
description = "Find clean independent motels in small towns that also have good non-chain food"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35",
    "fastapi>=0.139.0",
    "httpx>=0.27",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.49.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
